--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,35 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+name: Camunda workflow Test
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name:
+      bpmn_file_name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+        description: 'Camunda file name'
         # Default value if no value is explicitly provided
-        default: 'World'
         # Input has to be provided for the workflow to run
         required: true
         # The data type of the input
         type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Upload BPMN artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: bpmn-artifact
+          path: ./bpmn
+
+      - name: Deploy process to Camunda
+        run: |
+          curl -X POST -H "Content-Type: multipart/form-data" \
+          -F "deployment-name=${{ github.event.inputs.bpmn_file_name }}" \
+          -F "enable-duplicate-filtering=true" \
+          -F "deploy-changed-only=true" \
+          -F "${{ github.event.inputs.bpmn_file_name }}.bpmn=./bpmn/${{ github.event.inputs.bpmn_file_name }}.bpmn" \
+          http://camunda-server:8080/engine-rest/deployment/create
