--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "camunda-external-task-client-js": "~2.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zeebe-node": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
