--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "camunda-external-task-client-js": "~2.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "zbctl": "^8.3.0",
     "zeebe-node": "^8.3.1"
   },
   "devDependencies": {
