--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Deploy process to Camunda
         run: |
-          zbctl deploy resource ${{ github.event.inputs.bpmn_file_name }}.bpmn --address 'http://10.10.102.86:30009' --clientId 'zeebe' --clientSecret 'test' --authzUrl 'http://10.10.102.86:30001/auth/realms/camunda-platform/protocol/openid-connect/token'
+          zbctl deploy resource ${{ github.event.inputs.bpmn_file_name }}.bpmn --audience 'zeebe-api' --address 'http://10.10.102.86:30009' --clientId 'zeebe' --clientSecret 'test' --authzUrl 'http://10.10.102.86:30001/auth/realms/camunda-platform/protocol/openid-connect/token'
         working-directory: ./bpmn
